--- a/src/app.html
+++ b/src/app.html
@@ -10,5 +10,8 @@
 		<div style="display: contents">
 			%sveltekit.body%
 		</div>
+		<!-- Cloudflare Web Analytics -->
+		<script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+			data-cf-beacon='{"token": "98b1624b70ed4251a4d2c7b54b8f28e7"}'></script><!-- End Cloudflare Web Analytics -->
 	</body>
 </html>
